--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -5,9 +5,10 @@
         "node": true
     },
     "extends": "eslint:recommended",
-    "parser": "babel-eslint",
+    "parser": "@babel/eslint-parser",
     "parserOptions": {
         "ecmaVersion": 11,
+        "requireConfigFile": false,
         "sourceType": "module"
     },
     "rules": {
