--- a/package.json
+++ b/package.json
@@ -2,30 +2,38 @@
   "name": "commentviewer",
   "version": "3.2.1",
   "description": "View and analyze YouTube comments easily.",
-  "main": "index.js",
   "engines": {
-    "node": "14.x"
+    "node": "^14.x"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/FrozenKite/comment-viewer"
   },
   "dependencies": {
-    "better-sqlite3": "^7.4.3",
+    "better-sqlite3": "^7.4.4",
     "express": "^4.17.1",
-    "googleapis": "^84.0.0",
-    "socket.io": "^4.1.3",
-    "socket.io-client": "^4.1.3",
-    "uplot": "1.5.2",
+    "googleapis": "^91.0.0",
+    "socket.io": "^4.3.2",
+    "socket.io-client": "^4.3.2",
+    "uplot": "^1.6.16",
     "winston": "^3.3.3"
   },
   "devDependencies": {
-    "babel-eslint": "^10.1.0",
-    "eslint": "^7.32.0",
-    "parcel-bundler": "^1.12.5"
+    "@babel/eslint-parser": "^7.16.3",
+    "eslint": "^8.2.0",
+    "parcel": "^2.0.1"
+  },
+  "targets": {
+    "default": {
+      "distDir": "dist",
+      "sourceMap": false,
+      "engines": {}
+    }
   },
   "scripts": {
-    "start": "node index.js"
+    "start": "node index.js",
+    "build": "parcel build public/index.html",
+    "purge-bootstrap": "purgecss --css ../bootstrap.min.css --content public/* --output public/bootstrap-purged.min.css"
   },
   "author": "FrozenKite",
   "license": "ISC"
