--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "3.3.0",
   "description": "View and analyze YouTube comments easily.",
   "engines": {
-    "node": "^14.x"
+    "node": ">=14.x"
   },
   "repository": {
     "type": "git",
