--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "dependencies": {
     "better-sqlite3": "^8.3.0",
     "express": "^4.18.2",
-    "googleapis": "^115.0.0",
+    "googleapis": "^122.0.0",
     "socket.io": "^4.6.1",
     "socket.io-client": "^4.6.1",
     "uplot": "^1.6.24",
@@ -19,8 +19,10 @@
   },
   "devDependencies": {
     "@babel/eslint-parser": "^7.21.3",
+    "@parcel/packager-xml": "2.9.3",
+    "@parcel/transformer-xml": "2.9.3",
     "eslint": "^8.38.0",
-    "parcel": "^2.8.3"
+    "parcel": "^2.9.3"
   },
   "targets": {
     "default": {
