Implement OpenSearch (tab-to-search) Quickly open the site from address bar in Chrome/Edge/Firefox/Safari. https://developer.mozilla.org/en-US/docs/Web/OpenSearch This utilizes parcel-reporter-static-files-copy to serve favicon.ico without hashing its filename. * Apparently Chrome disabled this feature in the past couple years -- you need to turn on the search engines manually in settings, which (imo) defeats the purpose.

--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "@parcel/packager-xml": "2.9.3",
     "@parcel/transformer-xml": "2.9.3",
     "eslint": "^8.38.0",
-    "parcel": "^2.9.3"
+    "parcel": "^2.9.3",
+    "parcel-reporter-static-files-copy": "^1.5.0"
   },
   "targets": {
     "default": {
@@ -30,6 +31,10 @@
       "sourceMap": false,
       "engines": {}
     }
+  },
+  "staticFiles": {
+    "staticPath": "public/favicon.ico",
+    "distDir": "dist"
   },
   "scripts": {
     "start": "node index.js",
