--- a/package.json
+++ b/package.json
@@ -8,21 +8,21 @@
     "node": ">=14.x"
   },
   "dependencies": {
-    "better-sqlite3": "^11.3.0",
-    "express": "^4.21.0",
-    "googleapis": "^144.0.0",
-    "socket.io": "^4.8.0",
-    "socket.io-client": "^4.8.0",
+    "better-sqlite3": "^11.10.0",
+    "express": "^4.21.2",
+    "googleapis": "^148.0.0",
+    "socket.io": "^4.8.1",
+    "socket.io-client": "^4.8.1",
     "uplot": "^1.6.31",
-    "winston": "^3.15.0",
+    "winston": "^3.17.0",
     "winston-daily-rotate-file": "^5.0.0"
   },
   "devDependencies": {
     "@babel/eslint-parser": "^7.25.7",
-    "@parcel/packager-xml": "^2.12.0",
-    "@parcel/transformer-xml": "^2.12.0",
+    "@parcel/packager-xml": "^2.15.2",
+    "@parcel/transformer-xml": "^2.15.2",
     "eslint": "^8.38.0",
-    "parcel": "^2.12.0",
+    "parcel": "^2.15.2",
     "parcel-reporter-static-files-copy": "^1.5.3"
   },
   "targets": {
@@ -41,5 +41,6 @@
     "dev": "parcel watch public/*.html",
     "build": "parcel build public/*.html",
     "purge-bootstrap": "purgecss --css ../bootstrap.min.css --content public/* --output public/bootstrap-purged.min.css"
-  }
+  },
+  "packageManager": "yarn@1.22.22+sha512.a6b2f7906b721bba3d67d4aff083df04dad64c399707841b7acf00f6b133b7ac24255f2652fa22ae3534329dc6180534e98d17432037ff6fd140556e2bb3137e"
 }
